--- a/package.json
+++ b/package.json
@@ -12,5 +12,9 @@
     "@tailwindcss/vite": "^4.1.18",
     "astro": "^5.16.6",
     "tailwindcss": "^4.1.18"
+  },
+  "devDependencies": {
+    "@iconify/json": "^2.2.420",
+    "@iconify/tailwind4": "^1.2.0"
   }
 }
