--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.18",
     "astro": "^5.16.6",
+    "nodemailer": "^7.0.12",
     "tailwindcss": "^4.1.18"
   },
   "devDependencies": {
