Added vercel adapter

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "tailwindcss": "^4.1.18"
   },
   "devDependencies": {
+    "@astrojs/vercel": "^9.0.2",
     "@iconify/json": "^2.2.420",
     "@iconify/tailwind4": "^1.2.0"
   }
