--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "devDependencies": {
     "@astrojs/vercel": "^9.0.2",
     "@iconify/json": "^2.2.420",
-    "@iconify/tailwind4": "^1.2.0"
+    "@iconify/tailwind4": "^1.2.0",
+    "@tailwindcss/typography": "^0.5.19"
   }
 }
